--- a/public/_playersite/index.html
+++ b/public/_playersite/index.html
@@ -476,7 +476,7 @@
 									</div>
 									{{#if support}}
 									<div class="col-xs-8 right-align">
-										Powered by <a href="http://restreamer.ru/" target="blank" rel="noopener">Restreamer</a>
+										Powered by <a href="./" target="blank" rel="noopener">Restreamer</a>
 									</div>
 									{{/if}}
 								</div>
